--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,18 +13,21 @@
         android:theme="@style/Theme.Ddm_nativo"
         tools:targetApi="31">
         <activity
-            android:name=".interface_grafica.ExemploLayout"
+            android:name="com.example.ddm_nativo.componente_customizado_baixo_nivel.ComponenteCustomizadoBaixoNivel"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
-            android:name=".introducao.CicloDeVidaAtividadeLOG"
+            android:name=".interface_grafica.ExemploLayout"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".introducao.CicloDeVidaAtividadeLOG"
+            android:exported="true" />
     </application>
 
 </manifest>
